# mira

./: .env.example  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  tag-on-merge.yml  website.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/claude/: error.rs  git_ops.rs  mod.rs  process.rs  session.rs  types.rs
src-tauri/src/config/: mod.rs
src-tauri/src/github/: client.rs  error.rs  mod.rs  types.rs
src-tauri/src/google/: client.rs  error.rs  mod.rs  token_store.rs  types.rs
src-tauri/src/jira/: client.rs  mod.rs  types.rs
src-tauri/src/workspace/: error.rs  mod.rs  node.rs  setup.rs  vite.rs
src/lib/: api.ts  github-oauth.ts  google-oauth.ts  jira-oauth.ts
src/lib/components/: CalendarSidebar.svelte  ChatWidget.svelte  Connectors.svelte  DiffViewer.svelte  EventCreateModal.svelte  EventPopover.svelte  Header.svelte  JiraLinkModal.svelte  Notifications.svelte  PRCard.svelte  PRList.svelte  PRScheduler.svelte  PRSubmitForm.svelte  Settings.svelte  SetupWizard.svelte  StatusBadge.svelte  SyncControls.svelte  TaskCard.svelte  TaskList.svelte  TaskScheduler.svelte
src/lib/scheduling/: autoSchedule.ts
src/lib/stores/: backlogGroups.ts  calendar.ts  calendarBoxes.ts  chat.ts  config.ts  github.ts  google.ts  sidebarTasks.ts  sync.ts  tasks.ts  theme.ts  workspace.ts
src/routes/: About.svelte  Calendar.svelte  Dashboard.svelte  EditMode.svelte  SettingsPage.svelte
website/: CNAME  index.html  style.css
